CMRARC-426 fixed landing page header from wrapping and added rounded borders with a bit of margin for records page. finally moved common/base.scss before the pages css.

--- a/app/assets/stylesheets/pages/_records.scss
+++ b/app/assets/stylesheets/pages/_records.scss
@@ -1,4 +1,8 @@
 .record_review_data {
+  border-radius: 10px;
+  border: solid 2px;
+  margin: 20px auto;
+  margin-bottom: 40px;
   padding: 60px;
   font-size: 0.9em;
   background-color: white;
